albums/src/components/Albums.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  background-color: #fff;
}

.middle-section {
  width: 100%;
  height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 5%;
}

.title-container {
  width: 46%;
  display: flex;
  justify-content: space-between;
}

.title {
  font-weight: bold;
  font-family: 'Roboto', sans-serif;
}

.sort-title {
  margin-right: 6%;
  font-family: 'Roboto', sans-serif;
}
.sorting {
  display: flex;
  width: 25%;
}

.album-container {
  width: 50%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 1%;
}

.delete-container {
  width: 100%;
  height: 10%;
  border-top-left-radius: 8%;
  margin-left: 7%;
  margin-bottom: 10%;
  display: flex;
  justify-content: flex-end;
  align-items: center;;
}

.delete {
  display: none;
}

.delete-container:hover .delete {
  border: 1px solid black;
  border-radius: 50%;
  padding: 3%;
  display: flex;
  cursor: pointer;
  background-color: #fff;
}

.album {
  width: 30%;
  height: 29vh;
  margin: 1%;
  border-radius: 8%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px solid black;
  background-color: #7209b7;
}

.artwork {
  width: 70%;
  height: 15vh;
  color: #fff;
  text-align: center;
  font-size: .7rem;
  font-family: 'Roboto', sans-serif;
}




.album-title {
  margin-top: 4%;
  font-weight: bold;
  font-size: 1.2rem;
  font-family: 'Roboto', sans-serif;
  color: #fff;
}

.album-artist {
  margin-top: 4%;
  font-family: 'Roboto', sans-serif;
  color: #fff;
  font-size: .8rem;
  margin-bottom: 15%;
}

@media (max-width: 500px) {
  .album-container {
    width: 100%;
    display: flex;
    justify-content: center;
  }

  .title-container {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  .title {
    font-weight: bold;
    font-family: 'Roboto', sans-serif;
    margin-left: 4%;
  }
  .sorting {
    display: flex;
    width: 35%;
  }

  .album-title {
    margin-top: 4%;
    font-weight: bold;
    font-size: .8rem;
    font-family: 'Roboto', sans-serif;
    color: #fff;
  }
 
  
}

